<resources>
    <string name="app_name">Movies</string>
    <string name="app_name_details">Details</string>
    <string name="app_name_reviews">Reviews</string>
    <string name="app_name_trailers">Trailers</string>
    <string name="action_details">details</string>
    <string name="action_settings">settings</string>
    <string name="app_name_preferences">Settings</string>
    <string name="internet_error">This app needs internet connection available.</string>
    <string name="details_release_label">Release</string>
    <string name="details_user_rating">User rating</string>
    <string name="details_user_rating_value">%1$s / 10</string>
    <string name="example_title">The last mohican</string>
    <string name="example_popularity">123.537721</string>
    <string name="example_release_date">2016-06-18</string>
    <string name="example_user_rating">5.8 / 10</string>
    <string name="example_plot">The quiet life of a terrier named Max is upended when his owner takes in Duke, a stray whom Max instantly dislikes.</string>
    <string name="example_review_author">Mr. Reviewer</string>
    <string name="example_review">**Street pets versus the house pets! A day adventure in a big city</string>
    <string name="query_error">Ups, something worng happend, please try again after a while</string>
    <string name="loading_message">Updating movies</string>
    <string name="operation_forbidden">operation not allowed</string>
    <string name="action_add_favorites">add favorites</string>
    <string name="details_popularity_label">Popularity</string>
    <string name="show_reviews">Reviews</string>
    <string name="show_trailers">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="trailers_title">Trailers</string>
    <string name="loading_reviews">Loading reviews</string>
    <string name="loading_trailers">Loading trailers</string>
    <string name="no_reviews">There is no review yet</string>
    <string name="no_trailers">There is no video yet</string>
    <string name="no_movies">There is no movie yet</string>


    <!--preferences strings-->
    <string name="pref_sort_key">pref_sort_key</string>
    <string name="pref_sort_title">Sort movies criteria</string>
    <string name="pref_sort_value_popularity">popularity</string>
    <string name="pref_sort_value_top_rated">top_rated</string>
    <string name="pref_sort_value_defaul">@string/pref_sort_value_popularity</string>
    <string name="pref_sort_label_popularity">Popularity</string>
    <string name="pref_sort_label_top_rated">Top Rated</string>
    <string name="pref_last_update_date">pref_last_update_date</string>
    <string name="pref_favorites_only_key">pref_favorites_only_key</string>
    <string name="pref_favorites_only_title">Show only favorites</string>
    <string name="pref_refresh_title">Refresh movies frecuency</string>
    <string name="pref_refresh_key">pref_refresh_key</string>
    <!--Using minutes to calculate next refresh-->
    <string name="pref_refresh_default">60</string>
    <string name="pref_refresh_minute_value" translatable="false">1</string>
    <string name="pref_refresh_hour_value" translatable="false">60</string>
    <string name="pref_refresh_day_value" translatable="false">1440</string>
    <string name="pref_refresh_week_value" translatable="false">10080</string>
    <string name="pref_refresh_minute_label">every minute</string>
    <string name="pref_refresh_hour_label">every hour</string>
    <string name="pref_refresh_day_label">every day</string>
    <string name="pref_refresh_week_label">every week</string>
    <string name="pref_size_list_key">pref_films_length_list_key</string>
    <string name="pref_size_list_title">Movies List size</string>
    <string name="pref_size_list_20">20 elements</string>
    <string name="pref_size_list_60">60 elements</string>
    <string name="pref_size_list_120">120 elements</string>


</resources>
