<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="@string/pref_sort_value_defaul"
        android:entries="@array/sort_labels"
        android:entryValues="@array/sort_values"
        android:title="@string/pref_sort_title"
        app:key="@string/pref_sort_key"
        ></ListPreference>

    <ListPreference
        android:defaultValue="@string/pref_refresh_default"
        android:entries="@array/frecuency_labels"
        android:entryValues="@array/frecuency_values"
        android:title="@string/pref_refresh_title"
        app:key="@string/pref_refresh_key"
        ></ListPreference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_favorites_only_key"
        android:title="@string/pref_favorites_only_title">
    </CheckBoxPreference>
    <ListPreference
        android:defaultValue="20"
        android:entries="@array/size_list_label"
        android:entryValues="@array/size_list_values"
        android:key="@string/pref_size_list_key"
        android:title="@string/pref_size_list_title">

    </ListPreference>

</PreferenceScreen>